Align with latest changes from Microsoft. Logo source added

--- a/src/Proggmatic.SpaServices.Vite/Proggmatic.SpaServices.Vite.csproj
+++ b/src/Proggmatic.SpaServices.Vite/Proggmatic.SpaServices.Vite.csproj
@@ -39,7 +39,7 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.*" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
