--- a/src/Proggmatic.SpaServices.Vite/Proggmatic.SpaServices.Vite.csproj
+++ b/src/Proggmatic.SpaServices.Vite/Proggmatic.SpaServices.Vite.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
     <AssemblyName>Proggmatic.SpaServices.Vite</AssemblyName>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
 
-    <Version>7.0.0</Version>
+    <Version>8.0.0</Version>
 
     <Title>Vite Server Middleware</Title>
     <Description>Vite middleware and helpers for building and serving single page applications on ASP.NET Core.</Description>
@@ -24,7 +24,7 @@
 
     <PackageTags>Vite SPA middleware server serve</PackageTags>
     <PackageReleaseNotes>
-      Updated to .NET 7.0.0
+      Updated to .NET 8.0.0
     </PackageReleaseNotes>
 
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
@@ -46,8 +46,12 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="8.0.0" />
+  </ItemGroup>
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
