--- a/src/Proggmatic.SpaServices.Vite/Proggmatic.SpaServices.Vite.csproj
+++ b/src/Proggmatic.SpaServices.Vite/Proggmatic.SpaServices.Vite.csproj
@@ -21,6 +21,7 @@
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageIcon>icon.png</PackageIcon>
     <PackageReadmeUrl>https://raw.githubusercontent.com/proggmatic/vite-server-middleware/master/README.md</PackageReadmeUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
 
     <PackageTags>Vite SPA middleware server serve</PackageTags>
     <PackageReleaseNotes>
@@ -34,7 +35,7 @@
   <ItemGroup>
     <None Include="../../icon.png" Pack="true" PackagePath="/" />
     <None Include="../../LICENSE.txt" Pack="true" PackagePath="/" />
-    <None Include="../../README.md" />
+    <None Include="../../README.md" Pack="true" PackagePath="/"/>
   </ItemGroup>
 
 
