--- a/src/Proggmatic.SpaServices.Vite/Proggmatic.SpaServices.Vite.csproj
+++ b/src/Proggmatic.SpaServices.Vite/Proggmatic.SpaServices.Vite.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
     <AssemblyName>Proggmatic.SpaServices.Vite</AssemblyName>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
 
-    <Version>8.0.0</Version>
+    <Version>9.0.0</Version>
 
     <Title>Vite Server Middleware</Title>
     <Description>Vite middleware and helpers for building and serving single page applications on ASP.NET Core.</Description>
@@ -25,7 +25,7 @@
 
     <PackageTags>Vite SPA middleware server serve</PackageTags>
     <PackageReleaseNotes>
-      Updated to .NET 8.0.0
+      Updated to .NET 9.0.0
     </PackageReleaseNotes>
 
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
@@ -49,6 +49,10 @@
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
